# repolens

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: release.yml
Formula/: repolens-cli.rb  repolens.rb
repolens/: __init__.py  ai_client.py  analyzer.py  api_scanner.py  cli.py  dead_code.py  env_scanner.py  fetcher.py  graph.py  models.py  scanner.py
repolens/tui/: app.py
scripts/: install.sh
