[project]
name = "repolens"
version = "0.1.0"
description = "Instant clarity on any codebase. Navigate imports, trace functions, and get AI answers — all in one terminal view."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual>=0.47.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.scripts]
repolens = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
