[project]
name = "repolens-cli"
version = "0.2.1"
description = "Instant clarity on any codebase. Navigate imports, trace functions, and get AI answers — all in one terminal view."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Satyam Singh", email = "satyam.singh@whyminds.ai" }]
keywords = ["codebase", "tui", "developer-tools", "ai", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "textual>=0.47.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/Satyam12singh/repolens"
Repository = "https://github.com/Satyam12singh/repolens"
Issues = "https://github.com/Satyam12singh/repolens/issues"

[project.scripts]
repolens = "repolens.cli:main"

[dependency-groups]
dev = ["pyinstaller>=6.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["repolens"]
